--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_fonts: ^4.0.4
   go_router: ^10.0.0
   dartz: ^0.10.1
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
